--- a/public/stylesheets/side_bar_menu.css
+++ b/public/stylesheets/side_bar_menu.css
@@ -9,22 +9,22 @@
 /* ***************** ************** ************** */
 
 /* top */
-/* tree: #side_bar ul#top_menu li a */
-#side_bar ul#top_menu{
+/* tree: #sidebar-main ul#top_menu li a */
+#sidebar-main ul#top_menu{
 	position:absolute;
         left: 0;
 	list-style:none;
 	margin:60px 0 0 0; padding:0; border:0;
 }
 
-#side_bar ul#top_menu li{
+#sidebar-main ul#top_menu li{
 	list-style:none;
 	margin:0 0 4px 0; padding:0; border:0;
 	display:block;
 	height:42px;
 }
 
-#side_bar ul#top_menu li a{
+#sidebar-main ul#top_menu li a{
 	display:block;
 	width:46px;
 	height:42px;
@@ -34,11 +34,11 @@
         background-repeat: no-repeat;
 }
 
-#side_bar.closed ul#top_menu li a{
+#sidebar-main.closed ul#top_menu li a{
     width:41px;
 }
 
-#side_bar ul#top_menu li a:hover{
+#sidebar-main ul#top_menu li a:hover{
 	display:block;
 	height:42px;
 	text-indent:-9999px;
@@ -47,7 +47,7 @@
 
 /* bottom */
 /* tree: #side_bar ul#bottom_menu li a */
-#side_bar ul#bottom_menu{
+#sidebar-main ul#bottom_menu{
 	position:absolute;
         left: 0;
 	list-style:none;
@@ -56,14 +56,14 @@
         
 }
 
-#side_bar ul#bottom_menu li{
+#sidebar-main ul#bottom_menu li{
 	list-style:none;
 	margin:0 0 4px 0; padding:0; border:0;
 	display:block;
 	height:42px;
 }
 
-#side_bar ul#bottom_menu li a{
+#sidebar-main ul#bottom_menu li a{
 	display:block;
 	width:46px;
 	height:42px;
@@ -72,11 +72,11 @@
         background-position: top left;
         background-repeat: no-repeat;
 }
-#side_bar.closed ul#bottom_menu li a{
+#sidebar-main.closed ul#bottom_menu li a{
     width:41px;
 }
 
-#side_bar ul#bottom_menu li a:hover{
+#sidebar-main ul#bottom_menu li a:hover{
 	display:block;
 	height:42px;
 	text-indent:-9999px;
